--- a/src/app/admin/stock/form-stock/form-stock.component.html
+++ b/src/app/admin/stock/form-stock/form-stock.component.html
@@ -39,6 +39,6 @@
     </mat-form-field><br/>
     <div>
         <button mat-flat-button color="primary">Save Changes</button>
-        <a mat-stroked-button routerLink="/suppliers">Cancel</a>
+        <a mat-stroked-button routerLink="/stock">Cancel</a>
     </div>
 </form>
